# ratematch

./: .gitignore
backend/: .env.example  Cargo.toml
backend/migrations/2025-11-05-091514-0000_initial/: up.sql
backend/src/: database.rs  endpoints.rs  entities.rs  errors.rs  main.rs  pagination.rs  schema.rs
db/: docker-compose.yaml  down.sql  test_data.sql  up.sql
ratematch/: README.md  index.html  package.json  vite.config.ts
ratematch/src/: App.vue  main.ts  style.css
ratematch/src/common/: Communicator.ts  Configurator.ts  entities.ts  response_entities.ts  types.ts
ratematch/src/components/: EventListItem.vue  Header.vue  MatchCard.vue  PageHeading.vue  RatingCard.vue
ratematch/src/router/: index.ts
ratematch/src/views/: EventView.vue  HomeView.vue  MatchView.vue  RatingView.vue
