[package]
name = "ratematch-srv"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4.9", features = ["serde-json"]}
chrono = { version = "0.4.42", features = ["serde"]}
diesel = { version = "2.3.3", features = ["postgres", "numeric", "r2d2", "postgres_backend", "chrono"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
